[package]
name = "ssfw"
description = "A super simple file watcher"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Michael Harris <mharris@luabase.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
glob = "0.3.1"
notify = { version = "6.1.1", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
