[package]
name = "ssfw"
description = "🪬 Super simple file watcher"
version = "0.5.1"
edition = "2021"
authors = ["Michael Harris <mharris@luabase.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mharrisb1/ssfw"
repository = "https://github.com/mharrisb1/ssfw"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.2"
glob = "0.3.1"
log = "0.4.20"
notify = { version = "6.1.1", features = ["serde"] }
notify-debouncer-mini = "0.4.1"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }

[profile.dev]
debug = true
